--- a/src/ejs/parts/_case-item.ejs
+++ b/src/ejs/parts/_case-item.ejs
@@ -1,11 +1,11 @@
 <article class="case-item">
   
   <div class="case-item__header">
-    <h2 class="case-item__title">
+    <h3 class="case-item__title">
       <span><%- titleSmall %></span>
       <span><%- titleMain %></span>
       <span>様</span>
-    </h2l><!-- /.case-item__title -->
+    </h3><!-- /.case-item__title -->
      <div class="case-item__img">
        <img src="<%- img %>" alt="<%- alt %>">
      </div><!-- /.case-item__img -->
