--- a/src/sass/module/_case-item.scss
+++ b/src/sass/module/_case-item.scss
@@ -8,7 +8,7 @@
 .case-item__header{
   background: $color-main-dark2;
   color: $white;
-  padding: rem(18) rem(20);
+  padding: rem(20) rem(20);
   border-radius: 12px 12px 0 0;
   position: relative;
   
@@ -56,6 +56,7 @@
 
  @include mq(tab) {
    font-size: rem(16);
+   margin-left: rem(10);
  }
   
 }
@@ -91,7 +92,7 @@
   border-radius: 0 0 12px 12px;
   
   @include mq(tab) {
-    padding: rem(34)rem(40)rem(40)rem(40) ;
+    padding: rem(38)rem(40)rem(40)rem(40) ;
     
   }
 }
@@ -159,6 +160,6 @@ position: relative;
  }
 }
 .case-item__text{
-  margin-top: rem(8);
+  margin-top: rem(5);
 
 }
