--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -36,6 +36,7 @@
  
  .contact__required {
   font-size: rem(12);
+  padding: rem(3) rem(8);
   line-height: 1;
   background: $color-accent2;
   color: #fff;
