--- a/src/sass/module/_contact-submit.scss
+++ b/src/sass/module/_contact-submit.scss
@@ -18,6 +18,7 @@
   justify-content: center;
   align-items: center;
 	text-decoration: none;
+	transition: .3s;
   
   @include mq(tab) {
     font-size: rem(16);
@@ -30,6 +31,8 @@
 .contact-button__submit:hover,
 .contact-button__submit:focus {
 	outline: none;
+	background: $color-main-dark2;
+	color: $white;
 }
 
 .contact-button__submit::-moz-foucus-inner {
