--- a/src/sass/module/_keyframes.scss
+++ b/src/sass/module/_keyframes.scss
@@ -7,3 +7,39 @@
     transform: scale(1.5);
   }
 }
+
+@keyframes clip {
+  from {
+    clip-path: polygon(0 0, 100% 0, 0 0, 0 100%);
+  }
+
+  25% {
+    clip-path: polygon(0 0, 100% 0, 0 100%, 0 100%);
+  }
+
+  50% {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+  75% {
+    clip-path: polygon(0 100%, 100% 0, 100% 100%, 0 100%);
+  }
+  to {
+    clip-path: polygon(100% 100%, 100% 0, 100% 100%, 0 100%);
+  }
+}
+
+@keyframes clip2 {
+  from {
+    clip-path: polygon(0 0, 100% 0, 0 0, 0 100%);
+   
+  }
+
+  50% {
+    clip-path: polygon(0 0, 100% 0, 0 100%, 0 100%);
+  }
+
+  100% {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+  
+}
