--- a/src/sass/module/_view-more.scss
+++ b/src/sass/module/_view-more.scss
@@ -40,6 +40,7 @@
 .view-more__text {
   font-size: rem(20);
   font-family: $second-font-family;
+  font-style: italic;
   position: relative;
   color: $white;
   width: 100%;
