--- a/src/sass/page/_sub-case.scss
+++ b/src/sass/page/_sub-case.scss
@@ -89,6 +89,7 @@
 .sub-case__title--en{
   font-size: rem(14);
   font-family: $second-font-family;
+  font-style: italic;
   color: $color-main-dark2;
   line-height: 1;
 
