--- a/src/sass/page/_top-mv.scss
+++ b/src/sass/page/_top-mv.scss
@@ -75,6 +75,7 @@ z-index: 5;
   font-size: rem(40);
   color: $color-main-dark2;;
   font-family: $second-font-family;
+  font-style: italic;
   font-weight: $normal;
   text-transform: uppercase;
 
