--- a/src/sass/module/_section-title.scss
+++ b/src/sass/module/_section-title.scss
@@ -3,6 +3,7 @@
 .section-title__en {
   font-size: rem(52);
   font-family: $second-font-family;
+  font-style: italic;
   line-height: 1.21538;
   color: $color-main-dark2;
   text-transform: uppercase;
