--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -59,6 +59,7 @@
   color: $color-main-dark2;
   background: $white;
   font-family: $second-font-family;
+  font-style: italic;
   text-transform: uppercase;
 
   @include mq(tab) {
