--- a/src/sass/module/_sub-service-flow.scss
+++ b/src/sass/module/_sub-service-flow.scss
@@ -43,6 +43,7 @@
   color: $color-accent;
   padding-bottom: rem(24.4);
   font-family: $second-font-family;
+  font-style: italic;
   
   @include mq(tab) {
     display: flex;
@@ -56,6 +57,7 @@
 .sub-service-flow__step{
   font-size: rem(20);
   font-family: $second-font-family;
+  font-style: italic;
   line-height: 1.2;
   text-transform: uppercase;
 
